--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tailwindcss/typography": "^0.5.16",
+    "bootstrap": "^5.3.7",
+    "holy-loader": "^2.3.13",
+    "lucide-react": "^0.525.0",
     "next": "15.3.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-pdf": "^10.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
