--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tailwindcss/typography": "^0.5.16",
     "bootstrap": "^5.3.7",
+    "framer-motion": "^12.23.24",
     "holy-loader": "^2.3.13",
     "lucide-react": "^0.525.0",
     "next": "15.3.1",
     "nodemailer": "^7.0.5",
     "pdfjs-dist": "^3.11.174",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
@@ -27,13 +29,13 @@
     "react-pdf": "^10.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^6.12.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5"
   }
 }
