--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-pdf": "^10.0.1"
+    "react-pdf": "^10.0.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
