--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.0.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
